@@ -169,6 +169,14 @@ caption test #9 [[Image:Test Image.jpg|thumb|Test ]] Caption]]
 
 caption test #10 [[Image:Test Image.jpg|thumb|caption1|caption2]]
 
+caption test #11 [[Image:Test Image.jpg|caption]]
+
+caption test #12 [[Image:Test Image.jpg|noframe|caption]]
+
+caption test #13 [[Image:Test Image.jpg|border|caption]]
+
+caption test #14 [[Image:Test Image.jpg|caption " test]]
+
 [[Image:Invalid Image "Name".jpg]]
 
 image link on alt virtual wiki
